// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Team renders Team 1`] = `
<div>
  <div>
    <div
      class="sc-esjQYD fZgxYS"
    >
      <div
        class="sc-kIPQKe cRzEQQ"
      >
        <div
          class="sc-dfVpRl fpwQPy"
        >
          <a
            class="sc-gzOgki fYazLb"
          >
            <img
              class="sc-iyvyFf irPqHj"
              data-testid="logo"
              path="test-file-stub"
            />
          </a>
          <div
            class="sc-hwwEjo jroJGa"
          >
            <a
              class="sc-kfGgVZ dRfPxx"
              aria-current="false"
            >
              Case
            </a>
            <a
              class="sc-kfGgVZ dRfPxx"
              aria-current="false"
            >
              AI
            </a>
            <a
              class="sc-kfGgVZ dRfPxx"
              aria-current="false"
            >
              Metod
            </a>
            <a
              class="sc-kfGgVZ dRfPxx"
              aria-current="false"
            >
              Medarbetare
            </a>
            <a
              class="sc-kfGgVZ dRfPxx"
              aria-current="false"
            >
              Karriär
            </a>
            <a
              class="sc-kfGgVZ dRfPxx"
              aria-current="false"
            >
              Om
            </a>
            <div
              class="sc-kPVwWT hpTcRX"
            />
          </div>
        </div>
        <div
          class="sc-eXEjpC jVUDZG"
        >
          <h1
            class="sc-ibxdXY ixQzHh"
          >
            <span>
              Det är vi som är Iteam
            </span>
          </h1>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-ifAKCX enKhVc"
  >
    <div
      class="sc-htpNat eTTkxF"
    >
      <div
        class="sc-bwzfXH kkDUXN"
        data-test="filter-"
        tabindex="0"
      >
        Alla
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Stockholm"
        tabindex="0"
      >
        Stockholm
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Göteborg"
        tabindex="0"
      >
        Göteborg
      </div>
    </div>
    <div
      class="sc-jDwBTQ tmGSH"
    >
      <div
        class="sc-iRbamj kTemoU"
      >
        <div
          class="sc-kEYyzF bEzYhM"
        >
          <a
            class="sc-eNQAEJ iNAKrx"
          >
            <div
              class="sc-bwCtUz fosYzo"
            >
              <div>
                <img
                  class="sc-hMqMXs iNuAZy"
                  alt="Cookie M"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-RefOD blGlWO"
          >
            Cookie M
          </div>
          <div
            class="sc-iQKALj zJKdJ"
          >
            Cookie master
          </div>
          <div
            class="sc-hrWEMg dRgTan"
          >
            <a
              class="sc-dxgOiQ cAWEXR"
              href="tel:0701234567"
            >
              070-123 45 67
            </a>
          </div>
          <a
            class="sc-kpOJdX ipuhuJ"
            href="mailto:cm@sesame.com"
          >
            cm@sesame.com
          </a>
        </div>
        <div
          class="sc-kEYyzF bEzYhM"
        >
          <a
            class="sc-eNQAEJ iNAKrx"
          >
            <div
              class="sc-bwCtUz fosYzo"
            >
              <div>
                <img
                  class="sc-hMqMXs iNuAZy"
                  alt="Count van Count"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-RefOD blGlWO"
          >
            Count van Count
          </div>
          <div
            class="sc-iQKALj zJKdJ"
          >
            1 ahahah
          </div>
          <div
            class="sc-hrWEMg dRgTan"
          >
            <a
              class="sc-dxgOiQ cAWEXR"
              href="tel:0707654321"
            >
              070-765 43 21
            </a>
          </div>
          <a
            class="sc-kpOJdX ipuhuJ"
            href="mailto:count@sesame.com"
          >
            count@sesame.com
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/Team should handle changing location using keyboard 1`] = `
<div>
  <div>
    <div
      class="sc-esjQYD fZgxYS"
    >
      <div
        class="sc-kIPQKe cRzEQQ"
      >
        <div
          class="sc-dfVpRl fpwQPy"
        >
          <a
            class="sc-gzOgki fYazLb"
          >
            <img
              class="sc-iyvyFf irPqHj"
              data-testid="logo"
              path="test-file-stub"
            />
          </a>
          <div
            class="sc-hwwEjo jroJGa"
          >
            <a
              class="sc-kfGgVZ dRfPxx"
              aria-current="false"
            >
              Case
            </a>
            <a
              class="sc-kfGgVZ dRfPxx"
              aria-current="false"
            >
              AI
            </a>
            <a
              class="sc-kfGgVZ dRfPxx"
              aria-current="false"
            >
              Metod
            </a>
            <a
              class="sc-kfGgVZ dRfPxx"
              aria-current="false"
            >
              Medarbetare
            </a>
            <a
              class="sc-kfGgVZ dRfPxx"
              aria-current="false"
            >
              Karriär
            </a>
            <a
              class="sc-kfGgVZ dRfPxx"
              aria-current="false"
            >
              Om
            </a>
            <div
              class="sc-kPVwWT hpTcRX"
            />
          </div>
        </div>
        <div
          class="sc-eXEjpC jVUDZG"
        >
          <h1
            class="sc-ibxdXY ixQzHh"
          >
            <span>
              Det är vi som är Iteam
            </span>
          </h1>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-ifAKCX enKhVc"
  >
    <div
      class="sc-htpNat eTTkxF"
    >
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-"
        tabindex="0"
      >
        Alla
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Stockholm"
        tabindex="0"
      >
        Stockholm
      </div>
      <div
        class="sc-bwzfXH kkDUXN"
        data-test="filter-Göteborg"
        tabindex="0"
      >
        Göteborg
      </div>
    </div>
    <div
      class="sc-jDwBTQ tmGSH"
    >
      <div
        class="sc-iRbamj kTemoU"
      >
        <div
          class="sc-kEYyzF bEzYhM"
        >
          <a
            class="sc-eNQAEJ iNAKrx"
          >
            <div
              class="sc-bwCtUz fosYzo"
            >
              <div>
                <img
                  class="sc-hMqMXs iNuAZy"
                  alt="Count van Count"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-RefOD blGlWO"
          >
            Count van Count
          </div>
          <div
            class="sc-iQKALj zJKdJ"
          >
            1 ahahah
          </div>
          <div
            class="sc-hrWEMg dRgTan"
          >
            <a
              class="sc-dxgOiQ cAWEXR"
              href="tel:0707654321"
            >
              070-765 43 21
            </a>
          </div>
          <a
            class="sc-kpOJdX ipuhuJ"
            href="mailto:count@sesame.com"
          >
            count@sesame.com
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/Team should handle changing location using mouse 1`] = `
<div>
  <div>
    <div
      class="sc-esjQYD fZgxYS"
    >
      <div
        class="sc-kIPQKe cRzEQQ"
      >
        <div
          class="sc-dfVpRl fpwQPy"
        >
          <a
            class="sc-gzOgki fYazLb"
          >
            <img
              class="sc-iyvyFf irPqHj"
              data-testid="logo"
              path="test-file-stub"
            />
          </a>
          <div
            class="sc-hwwEjo jroJGa"
          >
            <a
              class="sc-kfGgVZ dRfPxx"
              aria-current="false"
            >
              Case
            </a>
            <a
              class="sc-kfGgVZ dRfPxx"
              aria-current="false"
            >
              AI
            </a>
            <a
              class="sc-kfGgVZ dRfPxx"
              aria-current="false"
            >
              Metod
            </a>
            <a
              class="sc-kfGgVZ dRfPxx"
              aria-current="false"
            >
              Medarbetare
            </a>
            <a
              class="sc-kfGgVZ dRfPxx"
              aria-current="false"
            >
              Karriär
            </a>
            <a
              class="sc-kfGgVZ dRfPxx"
              aria-current="false"
            >
              Om
            </a>
            <div
              class="sc-kPVwWT hpTcRX"
            />
          </div>
        </div>
        <div
          class="sc-eXEjpC jVUDZG"
        >
          <h1
            class="sc-ibxdXY ixQzHh"
          >
            <span>
              Det är vi som är Iteam
            </span>
          </h1>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-ifAKCX enKhVc"
  >
    <div
      class="sc-htpNat eTTkxF"
    >
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-"
        tabindex="0"
      >
        Alla
      </div>
      <div
        class="sc-bwzfXH kkDUXN"
        data-test="filter-Stockholm"
        tabindex="0"
      >
        Stockholm
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Göteborg"
        tabindex="0"
      >
        Göteborg
      </div>
    </div>
    <div
      class="sc-jDwBTQ tmGSH"
    >
      <div
        class="sc-iRbamj kTemoU"
      >
        <div
          class="sc-kEYyzF bEzYhM"
        >
          <a
            class="sc-eNQAEJ iNAKrx"
          >
            <div
              class="sc-bwCtUz fosYzo"
            >
              <div>
                <img
                  class="sc-hMqMXs iNuAZy"
                  alt="Cookie M"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-RefOD blGlWO"
          >
            Cookie M
          </div>
          <div
            class="sc-iQKALj zJKdJ"
          >
            Cookie master
          </div>
          <div
            class="sc-hrWEMg dRgTan"
          >
            <a
              class="sc-dxgOiQ cAWEXR"
              href="tel:0701234567"
            >
              070-123 45 67
            </a>
          </div>
          <a
            class="sc-kpOJdX ipuhuJ"
            href="mailto:cm@sesame.com"
          >
            cm@sesame.com
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/Team should not change using keyboard if not enter or space key 1`] = `
<div>
  <div>
    <div
      class="sc-esjQYD fZgxYS"
    >
      <div
        class="sc-kIPQKe cRzEQQ"
      >
        <div
          class="sc-dfVpRl fpwQPy"
        >
          <a
            class="sc-gzOgki fYazLb"
          >
            <img
              class="sc-iyvyFf irPqHj"
              data-testid="logo"
              path="test-file-stub"
            />
          </a>
          <div
            class="sc-hwwEjo jroJGa"
          >
            <a
              class="sc-kfGgVZ dRfPxx"
              aria-current="false"
            >
              Case
            </a>
            <a
              class="sc-kfGgVZ dRfPxx"
              aria-current="false"
            >
              AI
            </a>
            <a
              class="sc-kfGgVZ dRfPxx"
              aria-current="false"
            >
              Metod
            </a>
            <a
              class="sc-kfGgVZ dRfPxx"
              aria-current="false"
            >
              Medarbetare
            </a>
            <a
              class="sc-kfGgVZ dRfPxx"
              aria-current="false"
            >
              Karriär
            </a>
            <a
              class="sc-kfGgVZ dRfPxx"
              aria-current="false"
            >
              Om
            </a>
            <div
              class="sc-kPVwWT hpTcRX"
            />
          </div>
        </div>
        <div
          class="sc-eXEjpC jVUDZG"
        >
          <h1
            class="sc-ibxdXY ixQzHh"
          >
            <span>
              Det är vi som är Iteam
            </span>
          </h1>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-ifAKCX enKhVc"
  >
    <div
      class="sc-htpNat eTTkxF"
    >
      <div
        class="sc-bwzfXH kkDUXN"
        data-test="filter-"
        tabindex="0"
      >
        Alla
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Stockholm"
        tabindex="0"
      >
        Stockholm
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Göteborg"
        tabindex="0"
      >
        Göteborg
      </div>
    </div>
    <div
      class="sc-jDwBTQ tmGSH"
    >
      <div
        class="sc-iRbamj kTemoU"
      >
        <div
          class="sc-kEYyzF bEzYhM"
        >
          <a
            class="sc-eNQAEJ iNAKrx"
          >
            <div
              class="sc-bwCtUz fosYzo"
            >
              <div>
                <img
                  class="sc-hMqMXs iNuAZy"
                  alt="Cookie M"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-RefOD blGlWO"
          >
            Cookie M
          </div>
          <div
            class="sc-iQKALj zJKdJ"
          >
            Cookie master
          </div>
          <div
            class="sc-hrWEMg dRgTan"
          >
            <a
              class="sc-dxgOiQ cAWEXR"
              href="tel:0701234567"
            >
              070-123 45 67
            </a>
          </div>
          <a
            class="sc-kpOJdX ipuhuJ"
            href="mailto:cm@sesame.com"
          >
            cm@sesame.com
          </a>
        </div>
        <div
          class="sc-kEYyzF bEzYhM"
        >
          <a
            class="sc-eNQAEJ iNAKrx"
          >
            <div
              class="sc-bwCtUz fosYzo"
            >
              <div>
                <img
                  class="sc-hMqMXs iNuAZy"
                  alt="Count van Count"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-RefOD blGlWO"
          >
            Count van Count
          </div>
          <div
            class="sc-iQKALj zJKdJ"
          >
            1 ahahah
          </div>
          <div
            class="sc-hrWEMg dRgTan"
          >
            <a
              class="sc-dxgOiQ cAWEXR"
              href="tel:0707654321"
            >
              070-765 43 21
            </a>
          </div>
          <a
            class="sc-kpOJdX ipuhuJ"
            href="mailto:count@sesame.com"
          >
            count@sesame.com
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
